fail to create a background-image

--- a/index.html
+++ b/index.html
@@ -1,15 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <link href="https://fonts.googleapis.com/css?family=Monoton|Open+Sans:400,600,700" type="text/css" rel="stylesheet">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-  <link rel="stylesheet" type="text/css" href="slick/slick.css"/>
+  <link href="https://fonts.googleapis.com/css?family=Monoton|Open+Sans:400,600,700" type="text/css" rel="stylesheet">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1, minimum-scale=1"/>
 
   <link href="resources/css/style.css" type="text/css" rel="stylesheet">
-
-  <link rel="shortcut icon" type="image/png" href="/favicon.png"/>
-
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1, minimum-scale=1"/>
   <title>Jumpstart</title>
 </head>
 
@@ -18,22 +14,27 @@
     <header class="header">
       <div class="header__navigation">
         <nav class="navbar navbar-default navbar-fixed-top">
-          <div class="container-fluid">
             <ul class="nav navbar-nav">
-              <li><a href="#Explore" class="nav__linkEx">Explore</a></li>
-              <li><a href="#Start a project" class="nav__link"> Start a project</a></li>
-              <li><a href="#About us" class="nav__link"> About us</a></li>
+              <li><a href="#Explore" class="navbar-default navbar-nav active nav__link">Explore</a></li>
+              <li><a href="#Start a project" class="nav__link">Start a project</a></li>
+              <li><a href="#About us" class="nav__link">About us</a></li>
             </ul>
-          </div>
         </nav>
       </div>
 
       <div class="header__logo">
         <div class="logo">
-          <img src="resources/images/logo.png" class="navbar-brand navbar-right navbar-collapse">
+          <img src="../resources/images/logo.png" class="navbar-brand navbar-right navbar-collapse">
         </div>
       </div>
     </header>
+
+    <div class="hero-section">
+      <div class="jumbotron jumbotron-bike">
+        <h1>Get going</h1>
+        <p>Jumpstart your startup with some crowdsourced seed money, or support one of our 300,000,000+ creators and get rewards.</p>
+      </div>
+    </div>
 </body>
 
 
