improve the logo

--- a/index.html
+++ b/index.html
@@ -11,31 +11,37 @@
 
 <body>
   <div class="home-page">
+
     <header class="header">
       <div class="header__navigation">
         <nav class="navbar navbar-default navbar-fixed-top">
+          <div class="navbar-header">
+
             <ul class="nav navbar-nav">
-              <li><a href="#Explore" class="navbar-default navbar-nav active nav__link">Explore</a></li>
+              <li><a href="#Explore" class="navbar-default nav__link active">Explore</a></li>
               <li><a href="#Start a project" class="nav__link">Start a project</a></li>
               <li><a href="#About us" class="nav__link">About us</a></li>
             </ul>
-        </nav>
-      </div>
 
-      <div class="header__logo">
-        <div class="logo">
-          <img src="../resources/images/logo.png" class="navbar-brand navbar-right navbar-collapse">
+              <a class="navbar-brand navbar-right navbar-collapse" href="#Jumpstart">
+                <img src="resources/images/logo.png">
+              </a>
+            </div>
+          </nav>
         </div>
       </div>
     </header>
 
     <div class="hero-section">
       <div class="jumbotron jumbotron-bike">
-        <h1>Get going</h1>
-        <p>Jumpstart your startup with some crowdsourced seed money, or support one of our 300,000,000+ creators and get rewards.</p>
+        <div class="container-fluid">
+          <div class="title">Get going</div>
+          <div class="text">Jumpstart your startup with some crowdsourced seed money, or support one of our 300,000,000+ creators and get rewards.</div>
+          <a href="#Jump in" class="btn btn-primary btn-lg">Jump in</a>
+        </div>
       </div>
     </div>
+  </div>
 </body>
-
 
 
