add class featured project

--- a/index.html
+++ b/index.html
@@ -2,10 +2,13 @@
 <html>
 <head>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
   <link href="https://fonts.googleapis.com/css?family=Monoton|Open+Sans:400,600,700" type="text/css" rel="stylesheet">
+
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1, minimum-scale=1"/>
 
   <link href="resources/css/style.css" type="text/css" rel="stylesheet">
+
   <title>Jumpstart</title>
 </head>
 
@@ -13,34 +16,106 @@
   <div class="home-page">
 
     <header class="header">
-      <div class="header__navigation">
-        <nav class="navbar navbar-default navbar-fixed-top">
-          <div class="navbar-header">
-
-            <ul class="nav navbar-nav">
-              <li><a href="#Explore" class="navbar-default nav__link active">Explore</a></li>
-              <li><a href="#Start a project" class="nav__link">Start a project</a></li>
-              <li><a href="#About us" class="nav__link">About us</a></li>
-            </ul>
-
-              <a class="navbar-brand navbar-right navbar-collapse" href="#Jumpstart">
-                <img src="resources/images/logo.png">
-              </a>
-            </div>
-          </nav>
+      <nav class="navbar navbar-default navbar-fixed-top">
+        <div class="navbar-header">
+          <ul class="nav navbar-nav">
+            <li><a href="#Explore" class="active">Explore</a></li>
+            <li><a href="#Start a project">Start a project</a></li>
+            <li><a href="#About us">About us</a></li>
+          </ul>
         </div>
-      </div>
+        <div class="navbar-header__logo">
+          <a class="navbar-brand navbar-right navbar-collapse" href="#Jumpstart">
+            <img src="resources/images/logo.png">
+          </a>
+        </div>
+      </nav>
     </header>
 
     <div class="hero-section">
       <div class="jumbotron jumbotron-bike">
-        <div class="container-fluid">
+        <div class="container-fluid row">
           <div class="title">Get going</div>
           <div class="text">Jumpstart your startup with some crowdsourced seed money, or support one of our 300,000,000+ creators and get rewards.</div>
           <a href="#Jump in" class="btn btn-primary btn-lg">Jump in</a>
         </div>
       </div>
     </div>
+
+    <div class="featured-project">
+      <div class="featured-project__title">Featured Project</div>
+
+      <div class="project-image-container"></div>
+
+
+      <div class="project-title">Project title</div>
+      <div class="project-author">by Person Person</div>
+      <div class="project-text"> I have been questioned by many people to disclose some of the greatest traffic generating techniques that I know of. I am not to immedtiate to reveal them becaues I know the majority doesn't even take battle on them. All I know is that they work and you should be familiar with this too.</div>
+      <div class="project-product-categories">
+        <div class="product-categories__title">Product Categories</div>
+
+
+        <div class="product-category">Art</div>
+        <div class="product-category">Books</div>
+        <div class="product-category">Crystals</div>
+        <div class="product-category">Design</div>
+        <div class="product-category">Doodles</div>
+        <div class="product-category">Deedlybobs</div>
+        <div class="product-category">Farming</div>
+        <div class="product-category">Gadgets</div>
+        <div class="product-category">Hoverboards</div>
+        <div class="product-category">Jams, Jellies, Etc.</div>
+        <div class="product-category">Magazines</div>
+        <div class="product-category">Plants</div>
+        <div class="product-category">Snakes&Snake Equipment</div>
+        <div class="product-category">Tables</div>
+        <div class="product-category">Ventriliquist Figures</div>
+        <div class="product-category">Yoyos</div>
+      </div>
+    </div>
+
+
+    <div class="projects-examples__title">Projects</div>
+
+    <a href="#" class="project-examples">
+
+      <div class="projects-examples__body">
+          <img class="project-examples__image-container" src="resources/images/project1.png">
+
+        <div class="project-examples__info">
+          <div class="project-examples__title">Title</div>
+          <div class="project-examples__author">by Person Person</div>
+          <div class="project-examples__text">I have been questioned by many people to disclose some of the greatest traffic generating techniques that I know of. I am not to immedtiate to reveal them becaues I know the majority doesn't even take battle on them. All I know is that they work and you should be familiar with this too.</div>
+        </div>
+      </div>
+    </a>
+
+    <a href="#" class="project-examples">
+
+      <div class="projects-examples__body">
+          <img class="project-examples__image-container" src="resources/images/project2.png">
+
+        <div class="project-examples__info">
+          <div class="project-examples__title">Title</div>
+          <div class="project-examples__author">by Person Person</div>
+          <div class="project-examples__text">I have been questioned by many people to disclose some of the greatest traffic generating techniques that I know of. I am not to immedtiate to reveal them becaues I know the majority doesn't even take battle on them. All I know is that they work and you should be familiar with this too.</div>
+        </div>
+      </div>
+    </a>
+
+    <a href="#" class="project-examples">
+
+      <div class="projects-examples__body">
+          <img class="project-examples__image-container" src="resources/images/project3.png">
+
+        <div class="project-examples__info">
+          <div class="project-examples__title">Title</div>
+          <div class="project-examples__author">by Person Person</div>
+          <div class="project-examples__text">I have been questioned by many people to disclose some of the greatest traffic generating techniques that I know of. I am not to immedtiate to reveal them becaues I know the majority doesn't even take battle on them. All I know is that they work and you should be familiar with this too.</div>
+        </div>
+      </div>
+    </a>
+
   </div>
 </body>
 
