add footer part

--- a/index.html
+++ b/index.html
@@ -116,6 +116,14 @@
       </div>
     </a>
 
+    <footer class="footer">
+      <div class="footer__question">Having trouble thinkin of an idea?</div>
+      <div class="footer__summary">Inventors' block strikes at the worst times. But that's all changed with Jumpstart's Good Idea Generator Lite (GIGLi).</div>
+
+      <div class="footer__button">
+        <a href="#Jump in" class="btn btn-primary btn-lg">Learn more</a>
+      </div>
+
   </div>
 </body>
 
