--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@
         </div>
       </div>
     </div>
+    </div>
 
     <div class="container-fluid projects-example">
       <div class="row">
