Improve the image transition by creating image container with a feature "overflow: hidden"

--- a/index.html
+++ b/index.html
@@ -71,7 +71,9 @@
 
       <div class="row">
         <div class="col-xs-12 col-md-6">
-          <div class="project-image">
+          <div class="project-examples__image-container">
+            <div class="project-image">
+            </div>
           </div>
         </div>
 
@@ -115,7 +117,9 @@
       <div class="row">
         <div class="col-md-4 col-xs-12">
           <div class="projects-examples__body">
-            <img class="project-examples__image-container" src="resources/images/project1.png">
+            <div class="project-examples__image-container">
+              <img class="project-examples__image" src="resources/images/project1.png">
+            </div>
 
             <div class="project-examples__info">
               <h3 class="project-examples__title">The Right Tights</h3>
@@ -129,7 +133,9 @@
 
         <div class="col-md-4 col-xs-12">
           <div class="projects-examples__body">
-            <img class="project-examples__image-container" src="resources/images/project2.png">
+            <div class="project-examples__image-container">
+              <img class="project-examples__image" src="resources/images/project2.png">
+            </div>
 
             <div class="project-examples__info">
               <h3 class="project-examples__title">Peppermint Smart Home</h3>
@@ -143,7 +149,9 @@
 
         <div class="col-md-4 col-xs-12">
           <div class="projects-examples__body">
-            <img class="project-examples__image-container" src="resources/images/project3.png">
+            <div class="project-examples__image-container">
+              <img class="project-examples__image" src="resources/images/project3.png" />
+            </div>
 
             <div class="project-examples__info">
               <h3 class="project-examples__title">American Streetlife</h3>
