--- a/index.html
+++ b/index.html
@@ -77,13 +77,13 @@
           </div>
         </div>
 
-        <div class="col-md-3 featured-project__text">
+        <div class="col-xs-6 col-md-3 featured-project__text">
           <div class="project-title">DeFrost: A Documentary</div>
           <div class="project-author">by Leo De Firanze</div>
           <div class="project-text"> DeFrost is a documentary about growing up in a little red house in a cold, harsh valley. This is a story about my mother's childhood. This film attempts to capture vignettes of her ubbringing a her family, friends, pets, and eventual deaprture from a freezing valley in Northern Itali through beautiful cinematography and narration.</div>
         </div>
 
-        <div class="col-md-3 project-product-categories">
+        <div class="col-xs-6 col-md-3 project-product-categories">
 
           <div class="product-categories__title">Product Categories</div>
           <div class="product-category">Art</div>
@@ -165,26 +165,22 @@
       </div>
     </div>
 
-    <div class="container-fluid projects-example">
-      <div class="row">
-        <div class="col-xs-12">
-          <footer class="home-page__footer footer">
-            <div class="footer__question">
-              Having trouble thinkin of an idea?
-            </div>
-
-            <div class="footer__summary">
-              Inventors' block strikes at the worst times. But that's all changed with Jumpstart's Good Idea Generator Lite (GIGLi).
-            </div>
-
-            <div class="footer__button">
-              <a href="#Jump in" class="btn btn-primary btn-lg">
-                Learn more
-              </a>
-            </div>
-          </footer>
+    <div class="container-fluid support">
+      <footer class="home-page__footer footer">
+        <div class="footer__question">
+          Having trouble thinking of an idea?
         </div>
-      </div>
+
+        <div class="footer__summary">
+          Inventors' block strikes at the worst times. But that's all changed with Jumpstart's Good Idea Generator Lite (GIGLi).
+        </div>
+
+        <div class="footer__button">
+          <a href="#Jump in" class="btn btn-primary btn-lg">
+            Learn more
+          </a>
+        </div>
+      </footer>
     </div>
   </div>
 
